; ModuleID = '/home/carl/AnghaBench/masscan/src/extr_proto-ntp.c_val2string_lookup.c'
source_filename = "/home/carl/AnghaBench/masscan/src/extr_proto-ntp.c_val2string_lookup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Val2String = type { i8*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.Val2String*, i32)* @val2string_lookup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @val2string_lookup(%struct.Val2String* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.Val2String*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.Val2String* %0, %struct.Val2String** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 0, i32* %6, align 4
  br label %7

7:                                                ; preds = %32, %2
  %8 = load %struct.Val2String*, %struct.Val2String** %4, align 8
  %9 = load i32, i32* %6, align 4
  %10 = zext i32 %9 to i64
  %11 = getelementptr inbounds %struct.Val2String, %struct.Val2String* %8, i64 %10
  %12 = getelementptr inbounds %struct.Val2String, %struct.Val2String* %11, i32 0, i32 0
  %13 = load i8*, i8** %12, align 8
  %14 = icmp ne i8* %13, null
  br i1 %14, label %15, label %35

15:                                               ; preds = %7
  %16 = load %struct.Val2String*, %struct.Val2String** %4, align 8
  %17 = load i32, i32* %6, align 4
  %18 = zext i32 %17 to i64
  %19 = getelementptr inbounds %struct.Val2String, %struct.Val2String* %16, i64 %18
  %20 = getelementptr inbounds %struct.Val2String, %struct.Val2String* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 8
  %22 = load i32, i32* %5, align 4
  %23 = icmp eq i32 %21, %22
  br i1 %23, label %24, label %31

24:                                               ; preds = %15
  %25 = load %struct.Val2String*, %struct.Val2String** %4, align 8
  %26 = load i32, i32* %6, align 4
  %27 = zext i32 %26 to i64
  %28 = getelementptr inbounds %struct.Val2String, %struct.Val2String* %25, i64 %27
  %29 = getelementptr inbounds %struct.Val2String, %struct.Val2String* %28, i32 0, i32 0
  %30 = load i8*, i8** %29, align 8
  store i8* %30, i8** %3, align 8
  br label %36

31:                                               ; preds = %15
  br label %32

32:                                               ; preds = %31
  %33 = load i32, i32* %6, align 4
  %34 = add i32 %33, 1
  store i32 %34, i32* %6, align 4
  br label %7

35:                                               ; preds = %7
  store i8* null, i8** %3, align 8
  br label %36

36:                                               ; preds = %35, %24
  %37 = load i8*, i8** %3, align 8
  ret i8* %37
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
